test_app("jsGUI") {
  sources = [ "jsGUI/SimpleBrowser.cpp","jsGUI/evalJS.cpp","jsGUI/htmlParser.cpp"]
  libs = []

  deps = [
    ":flags",
    ":gpu_tool_utils",
    ":sk_app",
    ":skia",
    ":tool_utils",
    "modules/skplaintexteditor:editor_lib"
  ]
  include_dirs = [ "/usr/local/include"]
  libs = ["/usr/local/lib/quickjs/libquickjs.a"]
}